<resources>
    <string name="app_name">AllTest_And</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="save">저장</string>
    <string name="yes">예</string>
    <string name="no">아니요</string>
    <string name="search">검색</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="delete">삭제</string>
    <string name="add">추가</string>
    <string name="edit">편집</string>
    <string name="list">목록</string>
    <string name="open">열기</string>
    <string name="close">닫기</string>
    <string name="on">켜기</string>
    <string name="off">끄기</string>
    <string name="test">test</string>
    <string name="status">status</string>
    <string name="sound">sound</string>
    <string name="music">music</string>
    <string name="system">system</string>
    <string name="ring">ring</string>
    <string name="alarm">alarm</string>
    <string name="all">all</string>
    <string name="device">device</string>
    <string name="name">name</string>
    <string name="address">address</string>
    <string name="rssi">rssi</string>
    <string name="detail">detail</string>
    <string name="length">length</string>
    <string name="type">type</string>
    <string name="form">format</string>
    <string name="uuid">UUID</string>
    <string name="play">play</string>
    <string name="stop">stop</string>
    <string name="pause">pause</string>
    <string name="start">start</string>
    <string name="record">record</string>
    <string name="media_play">media play</string>
    <string name="prepare">prepare</string>
    <string name="unknown">unknown</string>
    <string name="remove">제거</string>
    <string name="replace">교체</string>
    <string name="show">show</string>
    <string name="hide">hide</string>
    <string name="pop_back">pop back</string>
    <string name="server">server</string>
    <string name="client">client</string>
    <string name="state">state</string>
    <string name="update">update</string>
    <string name="key">key</string>
    <string name="value">value</string>
    <string name="ready">ready</string>
    <string name="connect">connect</string>
    <string name="disconnect">disconnect</string>
    <string name="version">version</string>
    <string name="id">id</string>
    <string name="pwd">password</string>
    <string name="time">time</string>
    <string name="date">date</string>
    <string name="data">data</string>
    <string name="send">send</string>
    <string name="lock">lock</string>
    <string name="menu">menu</string>
    <string name="contents">contents</string>
    <string name="message">message</string>
    <string name="btn_show">show</string>
    <string name="btn_insert">insert</string>
    <string name="btn_clear">clear</string>
    <string name="btn_init">init</string>
    <string name="btn_export">export</string>
    <string name="btn_start">start</string>
    <string name="btn_stop">stop</string>
    <string name="btn_pause">pause</string>
    <string name="btn_record_start">record start</string>
    <string name="btn_record_stop">record stop</string>
    <string name="btn_record_pause">record pause</string>
    <string name="btn_record_resume">record resume</string>
    <string name="btn_play_start">play start</string>
    <string name="btn_play_stop">play stop</string>
    <string name="btn_send_msg">send message</string>
    <string name="notification_fore_test_desc">foreground service test</string>
    <string name="notification_fore_test_channel_desc">foreground service test</string>
    <string name="menu_ui">UI</string>
    <string name="menu_action">ACTION</string>
    <string name="menu_setting">SETTING</string>
    <string name="state_no">…</string>
    <string name="state_resolution">Resolution</string>
    <string name="state_complete">Complete</string>
    <string name="state_proceed">Proceed</string>
    <string name="state_test">test</string>
    <string name="state_close">close</string>
    <string name="switch_mode_login">Login Mode</string>
    <string name="switch_move_before_test">move before test</string>
    <string name="hint_move_before_test">when run app, move before test activity</string>
    <string name="bottom_menu_ui">ui</string>
    <string name="bottom_menu_action">action</string>
    <string name="bottom_menu_setting">setting</string>
    <string name="move_fst_base_activity">fst create activity</string>
    <string name="move_recycle_view_test">RecycleView test</string>
    <string name="move_viewpager">ViewPager Test</string>
    <string name="move_progress_test">progress test</string>
    <string name="move_spinner">spinner Test</string>
    <string name="move_date_pick">date pick Test</string>
    <string name="move_tab_test">tab test</string>
    <string name="move_float_button_test">float button Test</string>
    <string name="move_notification_test">notification test</string>
    <string name="move_list_click_test">ListView click Test</string>
    <string name="move_animation_test">animation test</string>
    <string name="move_custom_view_test">custom View test</string>
    <string name="move_rotate">rotate Test</string>
    <string name="move_listview_test">ListView test</string>
    <string name="move_textview_html_test">TextView html test</string>
    <string name="move_transparent_test">Transparent test</string>
    <string name="move_custom_behavior">Custom behavior Test</string>
    <string name="move_left_menu">left menu test</string>
    <string name="move_scroll_toolbar">scroll toolbar Test</string>
    <string name="move_custom_pick">custom pick Test</string>
    <string name="move_effect_test">Effect test</string>
    <string name="move_drag_test">drag and drop list test</string>
    <string name="move_naver_map_test">naver map test</string>
    <string name="move_act_start_test">start activity test</string>
    <string name="move_preference_save">preference save test</string>
    <string name="move_db_test">db test</string>
    <string name="move_service_test">service test</string>
    <string name="move_permission_test">Permission test</string>
    <string name="move_permission_contracts_test">Permission contracts test</string>
    <string name="move_app_info_test">app info data test</string>
    <string name="move_phone_state_test">phone state check test</string>
    <string name="move_fragment_test">Fragment test</string>
    <string name="move_binding_test">Binding test</string>
    <string name="move_alarm_test">Alarm test</string>
    <string name="move_intent_service_test">intent service test</string>
    <string name="move_job_scheduler_test">JobScheduler test</string>
    <string name="move_sensor_test">Sensor test</string>
    <string name="move_sound_test">Sound control test</string>
    <string name="move_thread_test">thread test</string>
    <string name="move_event_test">event test</string>
    <string name="move_script_test">WebView script test</string>
    <string name="move_view_model_test">ViewModel test</string>
    <string name="move_resource_test">resource test</string>
    <string name="move_voice_record_test">voice record test</string>
    <string name="move_time_test">Time test</string>
    <string name="move_aidl_test">AIDL test</string>
    <string name="move_share_test">Share test</string>
    <string name="move_opengl_test">OpenGL test</string>
    <string name="move_build_flavor">build, flavor type change test</string>
    <string name="move_annotation_test">Annotation Test</string>
    <string name="move_google_wear_msg_test">google wear message test</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="image">image</string>
    <string name="page_cnt">page count : </string>
    <string name="content_msg">content message : </string>
    <string name="refresh">refresh</string>
    <string name="mode">mode</string>
    <string name="horizontal">horizontal</string>
    <string name="vertical">vertical</string>
    <string name="linear">linear</string>
    <string name="grid">grid</string>
    <string name="staggered_grid">staggered grid</string>
    <string name="test_cont1">test cont</string>
    <string name="test_cont2">recycle view test\n test cont</string>
    <string name="test_cont3">all test\n recycle view\n test cont</string>
    <string name="tab_test_tab1">tab1</string>
    <string name="tab_test_tab2">tab2</string>
    <string name="tab_test_tab3">tab3</string>
    <string name="bridging_mode">Bridging Mode</string>
    <string name="bridging_phone">Bridging Mode in phone</string>
    <string name="delay_time">delay time</string>
    <string name="unit_second">s</string>
    <string name="important_level">channel important level</string>
    <string name="btn_anim_rotate_lr">rotate left right</string>
    <string name="btn_anim_change_size">change size</string>
    <string name="btn_anim_scale_alpha">change size and alpha</string>
    <string name="btn_anim_change_size_hv">change size horizontal and vertical</string>
    <string name="btn_anim_scale_alpha_reverse">change size and alpha reverse</string>
    <string name="btn_anim_rotate_camera">rotate camera</string>
    <string name="btn_landscape">가로</string>
    <string name="btn_portrait">세로</string>
    <string name="btn_sensor">센서</string>
    <string name="transparent_test_content">transparent test activity</string>
    <string name="btn_no_anim">no set animation</string>
    <string name="btn_anim_left">left in/right our</string>
    <string name="act_cnt">activity count : </string>
    <string name="start_eng">start</string>
    <string name="title_act_test1">test1(activity.test2)</string>
    <string name="title_act_test2">test2(no affinity)</string>
    <string name="title_act_start_test">start test activity(activity.test1)</string>
    <string name="title_act_test_finish">test finishOnTaskLaunch(activity.test2)</string>
    <string name="meta_data">meta data</string>
    <string name="build_type">build type</string>
    <string name="build_version">build version</string>
    <string name="battery">battery</string>
    <string name="text">text</string>
    <string name="integer">integer</string>
    <string name="start_service">start service(background)</string>
    <string name="start_foreground_service">start foreground service</string>
    <string name="start_background_location">start background location service</string>
    <string name="bind_service">bind service</string>
    <string name="btn_start_foreground_service">start foreground service</string>
    <string name="change_info">change info</string>
    <string name="method">method</string>
    <string name="select_type">select type</string>
    <string name="select_frag">select frag</string>
    <string name="back_stack">backStack</string>
    <string name="set_tag">set tag</string>
    <string name="fragment_list">fragment list</string>
    <string name="back_stack_list">back stack list</string>
    <string name="motion">motion</string>
    <string name="btn_request_motion_trigger">request motion</string>
    <string name="btn_pause_test">pause test</string>
    <string name="btn_stop_test">stop test</string>
    <string name="btn_touch_event">touch event test</string>
    <string name="action_form">%1$d action</string>
    <string name="action_down">down action</string>
    <string name="action_up">up action</string>
    <string name="action_none">none action</string>
    <string name="share_title">share</string>
    <string name="email">abc@gmail.com</string>
</resources>