<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/btn_notification_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_show"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/menu_setting"
            />

        <Switch
            android:id="@+id/sw_setting_bridging_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bridging_mode"
            />

        <Switch
            android:id="@+id/sw_setting_bridging_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bridging_phone"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delay_time"
                />

            <EditText
                android:id="@+id/et_notification_delay"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_second"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/important_level"
                />

            <Spinner
                android:id="@+id/sp_notification_important"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
