<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/lil_record_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        >
        <Button
            android:id="@+id/btn_audio_record_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_record_start"/>
        <Button
            android:id="@+id/btn_audio_record_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_record_pause"
            />
        <Button
            android:id="@+id/btn_audio_record_resume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_record_resume"
            />
        <Button
            android:id="@+id/btn_audio_record_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_record_stop"/>
        <Button
            android:id="@+id/btn_record_file_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_play_start"/>
        <Button
            android:id="@+id/btn_record_file_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_play_stop"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lil_record_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/lil_record_btn">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record"/>

        <TextView
            android:id="@+id/tv_record_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/no"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lil_media_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/lil_record_state">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/media_play"/>

            <TextView
                android:id="@+id/tv_media_play_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_media_play_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/no"/>

            <TextView
                android:id="@+id/tv_media_play_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_media_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
