<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#c0ffff"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <Button
            android:id="@+id/btn_anim_rotate_lr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_anim_rotate_lr"
            />
        <Button
            android:id="@+id/btn_anim_change_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_anim_change_size"
            />
        <Button
            android:id="@+id/btn_anim_change_size_hv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_anim_change_size_hv"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <Button
            android:id="@+id/bnt_anim_scale_alpha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_anim_scale_alpha"
            />
        <Button
            android:id="@+id/bnt_anim_scale_alpha_rev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_anim_scale_alpha_reverse"
            />
        <Button
            android:id="@+id/btn_anim_rotate_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_anim_rotate_camera"
            />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_animation_test"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#d0d0d0"
        >

        <ImageView
            android:id="@+id/iv_animation_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"
            />
    </FrameLayout>

</LinearLayout>
