<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text"
                />

            <EditText
                android:id="@+id/et_db_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/integer"
                />

            <EditText
                android:id="@+id/et_db_integer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:inputType="number"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/btn_db_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_insert"
                />

            <Button
                android:id="@+id/btn_db_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_clear"
                />

            <Button
                android:id="@+id/btn_db_init"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_init"
                />

            <Button
                android:id="@+id/btn_db_export"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_export"
                />

        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/lv_db"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</LinearLayout>
