<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/btn_recycle_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vertical"
                />
            <Button
                android:id="@+id/btn_recycle_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horizontal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/btn_recycle_linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/linear"
                />
            <Button
                android:id="@+id/btn_recycle_grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grid"
                />
            <Button
                android:id="@+id/btn_recycle_staggered_grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/staggered_grid"
                />
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recycle_test"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />
</LinearLayout>
