<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btn_right_menu_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open"
            />

        <Button
            android:id="@+id/btn_right_menu_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            />

        <CheckBox
            android:id="@+id/cb_right_menu_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lock"
            />
    </LinearLayout>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/dl_right_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="right"
        >
        <!-- main -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#f0a0a0"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contents"
                />
        </LinearLayout>
        <!-- menu -->
        <LinearLayout
            android:id="@+id/lil_right_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="80dp"
            android:orientation="vertical"
            android:background="#fffff0"
            android:layout_gravity="right"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menu"
                />
        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nv_left_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/nav_header_main"
            app:menu="@menu/drawer"
            >

        </com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>
